[project]
name = "exp1-document-structures-contacts-and-distances-v1"
version = "0.1.0"
description = "contacts-and-distances-v1 document structure: generate / infer / evaluate driver."
requires-python = ">=3.11,<3.13"
dependencies = [
    "marinfold",
    "gemmi>=0.6",       # mmCIF / PDB parsing for AFDB inputs
    "numpy",
    "pyarrow",
    "marin-zephyr",
    "fsspec",       # uniform local + cloud file IO for structure inputs
    "gcsfs",        # gs:// support for AFDB / marin buckets
]

[project.optional-dependencies]
# Backend extras: pick one based on platform. Each delegates to the
# matching extra on the consolidated marinfold package, so the heavy
# runtime (vllm / torch / mlx) is only installed when you ask for it.
#
# - eval        → vLLM (Linux+GPU production path)
# - eval-local  → transformers (Apple Silicon MPS, CPU, or CUDA)
# - eval-mlx    → MLX (Apple Silicon native, fastest local)
eval       = ["marinfold[vllm]"]
eval-local = ["marinfold[transformers]"]
eval-mlx   = ["marinfold[mlx]"]
# Network-dependent tests (byte-identity check against
# huggingface.co/timodonnell/protein-docs-tokenizer@<sha>) need
# huggingface_hub installed. pytest is for running tests in general.
test = ["pytest>=8", "huggingface_hub>=0.24"]

[dependency-groups]
dev = []

[tool.uv]
# Not a package — only used for venv + dep resolution.
package = false
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
marinfold = { path = "../../marinfold", editable = true }

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet (e.g. byte-identity check against the published tokenizer on HF Hub). Skip with `pytest -m 'not network'`.",
]
