[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exp26-evals-marinfold-1-5b-foldbench"
version = "0.1.0"
description = "Eval MarinFold 1.5B against 1B + Protenix v2 on the 100 FoldBench monomers from exp12."
requires-python = ">=3.11,<3.13"
# Host deps only — these install on bizon for scoring + the iris-submit.
# The TPU runtime (vllm-tpu, torch-xla) is opt-in via the `vllm` and
# `tpu` extras below; iris adds those when syncing on the worker.
dependencies = [
    # Iris CLI + its peer pkgs (all from marin find-links).
    "marin-iris",
    # Scoring + plotting on the host; gemmi parses mmCIFs for both
    # the host-side score_marinfold.py and the iris worker's
    # canonical_sequence.py (which reads the GT mmCIFs).
    "gemmi>=0.6",
    # google-cloud-storage drives the worker-side writes to GCS —
    # iris's TPU containers don't have `gsutil` on PATH, but the
    # service-account creds are auto-mounted, so the SDK Just Works.
    "google-cloud-storage>=2.10",
    "huggingface_hub>=0.24",
    "matplotlib>=3.8",
    "numpy",
    "pandas>=2.2",
    "pyarrow",
    "pyyaml>=6",
    "seaborn>=0.13",
]

[project.optional-dependencies]
# Worker-only inference stack. iris syncs these on the TPU worker via
# `--extra vllm --extra tpu`. Don't install locally on bizon — vllm
# and torch-xla pull TPU-specific wheels that conflict with the host
# CPU stack.
#
# `tpu` pulls `marin[tpu]` for torch-xla + vllm-tpu runtime alignment;
# this matches the marin protein-experiments branch which uses the
# same `--extra=vllm --extra=tpu` pair on iris launches.
vllm = ["vllm>=0.7"]
tpu = ["marin[tpu]; sys_platform == 'linux'"]
test = ["pytest>=8"]

[dependency-groups]
dev = []

[tool.uv]
package = false
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'linux'",
]
# Mirrored from marin-experiments/tiny-stories/pyproject.toml so the
# marin dep graph resolves the same way for us as it does for them.
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",
]

find-links = [
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-haliax-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-levanter-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-iris-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-zephyr-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-rigging-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-fray-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-finelog-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799",
    "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
]

# marin depends on resiliparse>=0.17.2 which only exists on this custom
# index. Mirrored from marin-experiments/tiny-stories/pyproject.toml.
[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
resiliparse = { index = "marin-resiliparse" }
