[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exp26-evals-marinfold-1-5b-foldbench"
version = "0.1.0"
description = "Eval MarinFold 1.5B against 1B + Protenix v2 on the 100 FoldBench monomers from exp12."
requires-python = ">=3.11,<3.13"
# Host deps only — these install on bizon for scoring + the iris-submit.
# The TPU runtime (vllm-tpu, torch-xla) is opt-in via the `vllm` and
# `tpu` extras below; iris adds those when syncing on the worker.
dependencies = [
    # Iris CLI + its peer pkgs (all from marin find-links).
    "marin-iris",
    # Scoring + plotting on the host; gemmi parses mmCIFs for both
    # the host-side score_marinfold.py and the iris worker's
    # canonical_sequence.py (which reads the GT mmCIFs).
    "gemmi>=0.6",
    # google-cloud-storage drives the worker-side writes to GCS —
    # iris's TPU containers don't have `gsutil` on PATH, but the
    # service-account creds are auto-mounted, so the SDK Just Works.
    "google-cloud-storage>=2.10",
    "huggingface_hub>=0.24",
    "matplotlib>=3.8",
    "numpy",
    "pandas>=2.2",
    "pyarrow",
    "pyyaml>=6",
    "seaborn>=0.13",
]

[project.optional-dependencies]
# Worker-only inference stack. iris syncs these on the TPU worker via
# `--extra vllm --extra tpu`. Don't install locally on bizon — vllm
# and torch-xla pull TPU-specific wheels that conflict with the host
# CPU stack.
#
# `vllm` mirrors the marin `vllm` extra as published in the
# `marin-latest` nightly (built from origin/main, which carries PR
# #5712 "Upgrade TPU vLLM stack to 0.19"). That bumps to vllm-tpu
# 0.19 / tpu-inference 0.19 / libtpu 0.0.39 — the protein-training-1b
# branch hasn't merged the upgrade, but the daily `marin-latest`
# nightly we pull via find-links has, so we must match those pins
# (libtpu 0.0.39) to stay co-installable with `marin[tpu]`.
# Inlining (rather than pulling `marin[vllm]`) so the source map
# below routes torch / torchvision to the pytorch-cpu index — uv
# source maps don't propagate through transitive extras.
vllm = [
    "jax==0.9.2",
    "jaxlib==0.9.2",
    "vllm-tpu==0.19.0",
    "tpu-inference==0.19.0",
    "triton==3.6.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torch==2.10.0",
    "torchvision==0.25.0+cpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
tpu = ["marin[tpu]; sys_platform == 'linux'"]
test = ["pytest>=8"]

[dependency-groups]
dev = []

[tool.uv]
package = false
fork-strategy = "fewest"
prerelease = "allow"
environments = [
    "sys_platform == 'linux'",
]
# Mirrored verbatim from marin's top-level pyproject.toml on origin/main
# (the source of the `marin-latest` nightly we pull via find-links).
# Keeping this list in sync is what lets the marin dep graph resolve
# the same way for us as it does inside marin itself.
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "aiofiles>=24.1.0",
    "anthropic>=0.71.0",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.27",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<5.0.0",
    "equinox>=0.11.10",
    "authlib>=1.7.2",
    "cbor2>=6.0.1",
    "click>=8.3.1",
    "gitpython>=3.1.50",
    "gradio>=6.14.0",
    "jupyter-server>=2.18.2",
    "jupyterlab>=4.5.7",
    "litellm>=1.83.14",
    "lxml>=6.1.0",
    "mistune>=3.2.1",
    "multipart>=1.3.1",
    "nltk>=3.9.4",
    "notebook>=7.5.6",
    "orjson>=3.11.9",
    "pillow>=12.2.0",
    "pyasn1>=0.6.3",
    "python-dotenv>=1.1.1",
    "ray>=2.55.1",
    "rich>=14.1.0",
    "setuptools>=82.0.1",
    "tiktoken>=0.12.0",
    "tornado>=6.5.5",
]

find-links = [
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-haliax-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-levanter-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-iris-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-zephyr-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-rigging-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-fray-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-finelog-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799",
    "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
]

# marin depends on resiliparse>=0.17.2 which only exists on this custom
# index. Mirrored from marin-experiments/tiny-stories/pyproject.toml.
[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

# pytorch-cpu is where the `+cpu` local-version wheels live (torch and
# torchvision), pinned by marin's `vllm` extra. Mirrored from
# lib/marin/pyproject.toml in the marin protein-training-1b branch.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
resiliparse = { index = "marin-resiliparse" }
# Route torch / torchvision through the pytorch-cpu index for the
# `vllm` extra so the `+cpu` local-version wheels resolve.
torch = [{ index = "pytorch-cpu", extra = "vllm" }]
torchvision = [{ index = "pytorch-cpu", extra = "vllm" }]
